# fragua

./: .git-blame-ignore-revs  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  VISION.md  agent-modules.fragua
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/pcb-core/: Cargo.toml
crates/pcb-core/src/: board.rs  event.rs  geometry.rs  hershey.rs  lib.rs  library.rs  project.rs  rectify.rs  schematic.rs  silk_clip.rs  stitch.rs  thermal.rs  units.rs
crates/pcb-drc/: Cargo.toml
crates/pcb-drc/examples/: drc_report.rs
crates/pcb-drc/src/: lib.rs
crates/pcb-drc/tests/: basic.rs
crates/pcb-erc/: Cargo.toml
crates/pcb-erc/src/: lib.rs
crates/pcb-erc/tests/: basic.rs
crates/pcb-fab/: Cargo.toml
crates/pcb-fab/examples/: fabcheck.rs
crates/pcb-fab/src/: lib.rs  profiles.rs
crates/pcb-gerber/: Cargo.toml
crates/pcb-gerber/examples/: export_fab.rs  stitch_pads.rs  verify_spokes.rs
crates/pcb-gerber/src/: bom.rs  bundle.rs  excellon.rs  gerber.rs  lib.rs  pick_place.rs
crates/pcb-gerber/tests/: fab_pack.rs  multi_layer_gerber.rs
crates/pcb-mcp/: Cargo.toml
crates/pcb-mcp/src/: lib.rs  protocol.rs  script.rs  server.rs  tools.rs
crates/pcb-mcp/tests/: tcp_session.rs
crates/pcb-odb/: Cargo.toml
crates/pcb-odb/src/: features.rs  lib.rs  tar.rs
crates/pcb-placer/: Cargo.toml
crates/pcb-placer/examples/: compare_stages.rs
crates/pcb-placer/src/: global.rs  lib.rs
crates/pcb-placer/tests/: basic.rs
crates/pcb-render/: Cargo.toml
crates/pcb-render/examples/: render_board.rs
crates/pcb-render/src/: lib.rs  png.rs  schematic.rs
crates/pcb-router/: Cargo.toml
crates/pcb-router-tune/: Cargo.toml
crates/pcb-router-tune/examples/: bench.rs
crates/pcb-router-tune/src/: lib.rs  main.rs
crates/pcb-router/src/: astar.rs  escape.rs  fanout.rs  grid.rs  length_match.rs  lib.rs  organic.rs  router.rs  stitching.rs
crates/pcb-router/tests/: diff_pair.rs  length_match.rs  multi_layer.rs  route_simple.rs  stitching.rs
crates/pcb-script/: Cargo.toml
crates/pcb-script/examples/: compact.rs  place_project.rs
crates/pcb-script/src/: compact.rs  lib.rs  script.rs  tools.rs
crates/pcb-script/tests/: library_calibrate_body.rs  library_rectify.rs  library_silk.rs  library_view_transform_spawn.rs  placement_delete.rs  placement_margin_validation.rs
docs/: index.html  style.css
frontend/: REDESIGN-BRIEF.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  styles.css
scripts/: install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: pending_payload.rs  photo_overlay_rotation.rs
