[workspace]
resolver = "2"
members = [
    "crates/pcb-core",
    "crates/pcb-router",
    "crates/pcb-placer",
    "crates/pcb-drc",
    "crates/pcb-erc",
    "crates/pcb-fab",
    "crates/pcb-gerber",
    "crates/pcb-render",
    "crates/pcb-script",
    "src-tauri",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kidandcat/fragua"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
