[package]
name = "fragua"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri host for Fragua."

[lib]
name = "fragua_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fragua"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pcb-core = { path = "../crates/pcb-core" }
pcb-render = { path = "../crates/pcb-render" }
pcb-script = { path = "../crates/pcb-script" }
pcb-router = { path = "../crates/pcb-router" }
pcb-router-tune = { path = "../crates/pcb-router-tune" }
pcb-gerber = { path = "../crates/pcb-gerber" }
pcb-odb = { path = "../crates/pcb-odb" }
pcb-drc = { path = "../crates/pcb-drc" }
pcb-fab = { path = "../crates/pcb-fab" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }

[lints]
workspace = true
