[package]
name = "pcb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Project model, geometry, units, and change events for the pcb tool."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[lints]
workspace = true
