[package]
name = "pcb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Project model, geometry, units, and change events for the pcb tool."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Photo rectification only needs to decode/encode JPEG + PNG. Trim every
# other codec so we don't pull the whole format zoo into the build.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[lints]
workspace = true
