[package]
name = "pcb-fab"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fab-house provider abstraction: rules, BOM/CPL formats, manufacturing-DRC, and zip packing."

[dependencies]
pcb-core = { path = "../pcb-core" }
pcb-gerber = { path = "../pcb-gerber" }
pcb-drc = { path = "../pcb-drc" }
pcb-erc = { path = "../pcb-erc" }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
