[package]
name = "pcb-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing pcb tools to AI agents."

[dependencies]
pcb-core = { path = "../pcb-core" }
pcb-gerber = { path = "../pcb-gerber" }
pcb-render = { path = "../pcb-render" }
pcb-router = { path = "../pcb-router" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "io-std", "rt-multi-thread", "macros", "sync", "net"] }

[[bin]]
name = "pcb-mcp-stdio"
path = "src/bin/stdio.rs"

[[bin]]
name = "pcb-mcp-bridge"
path = "src/bin/bridge.rs"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "io-std", "rt-multi-thread", "macros", "sync", "net", "time"] }

[lints]
workspace = true
