[package]
name = "pcb-script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Script interpreter that drives the PCB Project (the host serves it over HTTP)."

[dependencies]
pcb-core = { path = "../pcb-core" }
pcb-gerber = { path = "../pcb-gerber" }
pcb-render = { path = "../pcb-render" }
pcb-router = { path = "../pcb-router" }
pcb-drc = { path = "../pcb-drc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[lints]
workspace = true
