[package]
name = "pcb-script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Script interpreter that drives the PCB Project (the host serves it over HTTP)."

[dependencies]
pcb-core = { path = "../pcb-core" }
pcb-gerber = { path = "../pcb-gerber" }
pcb-render = { path = "../pcb-render" }
pcb-router = { path = "../pcb-router" }
pcb-placer = { path = "../pcb-placer" }
pcb-drc = { path = "../pcb-drc" }
pcb-erc = { path = "../pcb-erc" }
pcb-fab = { path = "../pcb-fab" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
imagesize = "0.13"

[dev-dependencies]
# Tests synthesise real (decodable) images for the rectify-photo verb.
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
